fix: delay nav visibility toggle to allow animations to complete

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ nav {
   overflow: hidden;
 
   visibility: hidden;
+  transition: visibility 1s;
 }
 
 nav.active {
